--- a/styles/slider.css
+++ b/styles/slider.css
@@ -1,27 +1,31 @@
 #slider {
-    width: 720px;
-    height: 400px;
-    overflow: hidden;
+  width: 720px;
+  height: 400px;
+  overflow: hidden;
 }
 
 #slider .slides {
-    display: block;
-    width: 6000px;
-    height: 400px;
-    margin: 0;
-    padding: 0;
+  display: block;
+  width: 6000px;
+  height: 400px;
+  margin: 0;
+  padding: 0;
 }
 
 #slider .slide {
-    float: left;
-    list-style-type: none;
-    width: 720px;
-    height: 400px;
+  float: left;
+  list-style-type: none;
+  width: 720px;
+  height: 400px;
 }
 
-/* helper css, since we don't have images */
-.slide1 {background: red;}
-.slide2 {background: blue;}
-.slide3 {background: green;}
-.slide4 {background: purple;}
-.slide5 {background: pink;}
+.slide1 {background: url('../images/tasm2-building.jpg');}
+.slide2 {background: url('../images/spider-highrise.jpg');}
+.slide3 {background: url('../images/spider-triple-threat.jpeg');}
+.slide4 {background: url('../images/spider-venom.jpg');}
+.slide5 {background: url('../images/tasm2-end.jpg');}
+
+.slide1, .slide2, .slide3, .slide4, .slide5 {
+  background-size: 100%;
+  background-repeat: no-repeat;
+}
